--- a/3주차/0718/프로그래밍이란.md
+++ b/3주차/0718/프로그래밍이란.md
@@ -1,18 +1,50 @@
-### 프로그래밍이란
+프로그래밍이란
 
-1. 프로그램을 만드는 행위
+- 프로그램을 만드는 행위
 
 ### 프로그램
 
-1. 특정 작업을 수행하는 일련의 명령어 모음
+- 특정 작업을 수행하는 일련의 명령어 모음
+
+---
 
 ### 파이썬의 특징
 
 1. 인터프리터 언어
+
 2. 객체 지향 프로그래밍
 
 ### 코드 스타일 가이드
 
 1. PEP8
-2. Google Style guide
-   등 회사마다 스타일 가이드가 따로 있기도 함
+
+2. Google Style guide 처럼 회사마다 스타일 가이드가 따로 있기도 함
+
+### 주석
+
+- 코드에 영향을 미치지 않음
+- 코드 이해에 중요
+
+### 변수
+
+- 데이터를 저장하기 위해서 사용
+- 복잡한 값들을 쉽게 사용하기 위함(추상화)
+- 다른 데이터를 언제든 새로 할당할 수 있어서 변수라고 불림
+
+  - Pythonic
+
+    ```python
+    x,y=10,20
+    y,x=x,y
+    print(x,y) #20 10
+    ```
+
+### 식별자
+
+- 첫 글자에는 숫자가 올 수 없음
+- 예약어이기 때문에, 식별자로 쓰지 못하는 것이 있음
+
+  ```python
+  import keyword
+  print(keyword.kwlist)
+  ```
