--- a/3주차/0724/주간정리.md
+++ b/3주차/0724/주간정리.md
@@ -16,3 +16,31 @@
 3. +,-
 
 ### 자료형의 분류
+
+1. 수치형
+   - int
+   - float
+   - complex
+2. 문자열
+3. 불린형
+4. None
+
+### 부동 소수점
+
+- 컴퓨터는 2진법, 사람은 10진법을 사용하여 나타남
+- 10진법의 근사값을 나타내기 때문에 동일하지 않음
+
+- 해결법?
+  1. 임의의 작은 수 활용
+     ```
+     <=1e-10
+     ```
+  2. python 3.5 이상에서 math 활용
+  ```
+  import math
+  matt.isclose(targetA,targetB)
+  ```
+
+### 삼중따옴표
+
+- 문자열 안에 '',""모두 사용 가능
