--- a/4주차/0725/데이터 구조.md
+++ b/4주차/0725/데이터 구조.md
@@ -4,7 +4,30 @@
 
 - 메서드는 클래스 내부에 정의한 함수, 사실상 함수 동일
 - **데이터 구조.메서드()** 형태로 활용
+
+  - .find()
+    - x의 첫 위치를 반환, 없으면 -1을 반환
+  - .index()
+    - x의 첫 위치를 반환, 없으면 오류
+  - .isalpha()
+    - 글자인지를 확인
+  - .isUpper()
+    - 대문자 여부
+  - .istitle()
+    - 타이틀 형식 여부
+  - .replace(old,new[,count])
+    - 바꿀 대상 글자를 새로운 글자로 바꿔서 변환
+    - count로 하면, 해당 개수만큼만 시행함
+  - .strip()
+    - 공백이나 특정 문자 제거
+  - .pop(i)
+    - i번째 인덱스에 있는 항목을 반환후 제거
+
+> 문자열은 불변형인데, 변경이 되는 이유
+
+- 기존의 문자열을 변경하는 게 아니라, 변경된 문자열을 새롭게 만들어서 반환함
 - 예시
+
   ```python
   list.append(10)
   String.split()
@@ -17,19 +40,15 @@
   #새로 덮어씌운 것임.
   #파이썬은 변수 안에 주소만 들어감
   ```
-  - .find()
-    - x의 첫 위치를 반환, 없으면 -1을 반환
-  - .index()
-    - x의 첫 위치를 반환, 없으면 오류
-  - .isalpha()
-    - 글자인지
-  - isUpper()
-    -
-  ***
+
   ## 얕은 복사와 깊은 복사
+
   ### 할당
+
   - 대입 연산자(=)
+
     - 리스트 복사 확인하기
+
     ```python
     ori_list = [1,2,3]
     copy_list=ori_list
@@ -39,6 +58,7 @@
     print(ori_list,copy_list)
     #두 리스트가 모두 바뀌게 됨
     ```
+
     - 대입 연산자를 통한 복사는 해당 객체에 대한 객체 참조를 복사함
 
 ### 얕은 복사
